--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,131 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  
+  font-size: 1rem;
+  line-height: 24px;
+  font-weight: 400;
+  color-scheme: light;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+
+  /* FULL COLORS */
+  --color1:#92BEC7; /* HIERARCHY / ORDER */
+  --color1b:#5C97A0;
+  --color1c:#B9DCE1;
+
+  --color2:#E55F41; /* ACTION / INTERACTIVE */
+  --color2b:#E24B29;
+  --color2c:#FF7353;
+
+  --color3:#BCA624; /* DARK ACCENT */
+  --color3b:#D1B40C;
+  --color3c:#DDC953;
+
+  --color5:#75979F; /* BASE */
+
+  --black:#181818;
+  /* --white:#f3f1e2; */
+  --white:#F6F6F4;
+  --blanco:white;
+  --grey1:#575756;
+  --grey2: #7B8794;
+  --grey3: #9AA5B1;
+
+  
+  --error:#E12D39;
+  --warning:#FDE12D;
+  --success:#2DCCA7;
+
+  /* GRADIENTES */
+  --gradientOne: linear-gradient(to left, rgba(255, 126, 71, 1), rgba(230, 42, 0, 1), rgba(255, 126, 71, 1));
+  --gradientTwo: linear-gradient(to left, rgb(3, 104, 255), rgba(58, 48, 240, 1), rgb(3, 104, 255));
+
+
+  /* TRANSPARENTS */
+  --color1Transparent: rgba(18, 59, 98,.7);
+  --color2Transparent: rgba(229, 95, 65,.7);
+  --color3Transparent: rgba(205, 226, 180,.7);
+
+  --whiteTransparent: rgba(243, 241, 226,.3);
+  --blackTransparent:rgba(24,24,24, .3);
+
+  --whiteDiff:rgba(243, 241, 226,.6);
+  --blackDiff:rgba(24,24,24, .6);
+
+
+  /* SHAPES */
+  --border: .3rem;
 }
+
 
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
-
-a {
-  color: inherit;
+  box-sizing: border-box;
+  color:var(--grey1);
   text-decoration: none;
+  user-select: none;
+  font-family: var(--fontPoppins), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 300;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+
+body {  
+  padding: 2rem 4rem;
+  min-height: 100dvh;
+  position: relative;
+  max-width: 1440px;   
+  margin: 0rem auto;
+  background-color: var(--white);
+}
+
+
+
+/* PAGINA ERROR*/
+.errorBox{
+    width: 100%;
+    height: 90dvh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+
+.errorBox h2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.errorBox svg{
+  fill: var(--color1);
+  margin-right: .5rem;
+}
+
+.errorButton{
+    color: var(--blanco);
+    background-color: var(--color1b);
+    padding: .5rem .5rem;
+    border: none;
+    border-radius: var(--border);
+    transition: background-color .3s ease-out;
+}
+
+.errorButton:hover{
+    background-color: var(--color1);
+}
+/* PAGINA ERROR*/
+
+
+@media only screen and (max-width: 850px){
+  body{
+    padding: 2rem 1rem;
   }
 }
+
